--- a/experiments/mynotebook.ipynb
+++ b/experiments/mynotebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "id": "0c5590eb",
    "metadata": {},
    "outputs": [
@@ -20,6 +20,18 @@
      "text": [
       "2.3.0\n",
       "2.3.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     C:\\Users\\Mishti\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt_tab is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\Mishti\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
    ],
@@ -39,10 +51,20 @@
     "\n",
     "# Importing NLTK for natural language processing\n",
     "import nltk\n",
+    "nltk.download('punkt_tab')\n",
+    "nltk.download('stopwords')\n",
     "from nltk.corpus import stopwords # For stopwords\n",
     "\n",
     "#machine learning package\n",
-    "from sklearn.preprocessing import LabelEncoder\n"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Importing the Porter Stemmer for text stemming\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "\n",
+    "# Importing the string module for handling special characters\n",
+    "import string"
    ]
   },
   {
@@ -55,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "8aa63ccc",
    "metadata": {},
    "outputs": [
@@ -148,7 +170,7 @@
        "4        NaN        NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "76e32790",
    "metadata": {},
    "outputs": [
@@ -230,7 +252,7 @@
        "4    ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "6d5198d7",
    "metadata": {},
    "outputs": [
@@ -327,7 +349,7 @@
        "4       0  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,12 +367,388 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d9d46972",
+   "metadata": {},
+   "source": [
+    "Feature Engineering"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a75319e7",
+   "execution_count": 42,
+   "id": "8422631b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#create an instance of Porter Stemmet\n",
+    "ps = PorterStemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "e4883e37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hey big boy'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create function to transform text for efficient processing\n",
+    "def transform_text(txt):\n",
+    "    #convert to lower case\n",
+    "    txt = txt.lower()\n",
+    "\n",
+    "    #tokenize using nltk\n",
+    "    txt = nltk.tokenize.word_tokenize(txt)\n",
+    "    \n",
+    "    #remove special characters\n",
+    "    y = []\n",
+    "    for i in txt:\n",
+    "        if i.isalnum():\n",
+    "            y.append(i)\n",
+    "    \n",
+    "    #after removing special characters, copy y into txt and clear y for future use\n",
+    "    txt = y[:] #creates a copy\n",
+    "    y.clear()\n",
+    "\n",
+    "    #remove stopwords and punctuation\n",
+    "    for i in txt:\n",
+    "        if i not in stopwords.words('english') and i not in string.punctuation:\n",
+    "            y.append(i)\n",
+    "    \n",
+    "    #after removing stopwords and punctuations, copy y into txt and clear y for future use\n",
+    "    txt = y[:]\n",
+    "    y.clear()\n",
+    "    \n",
+    "    #stem using Porter Stemmer\n",
+    "    for i in txt:\n",
+    "        y.append(ps.stem(i))\n",
+    "    txt = y[:]\n",
+    "    y.clear()\n",
+    "    \n",
+    "    #join the processed tokens back into a string and return processed text\n",
+    "    return \" \".join(txt)\n",
+    "\n",
+    "#Example text to check function\n",
+    "text = \"hey big boy's how @ are you how?\"\n",
+    "transform_text(text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "d91fe2ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>text</th>\n",
+       "      <th>processed_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
+       "      <td>go jurong point crazi avail bugi n great world...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Ok lar... Joking wif u oni...</td>\n",
+       "      <td>ok lar joke wif u oni</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
+       "      <td>free entri 2 wkli comp win fa cup final tkt 21...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>U dun say so early hor... U c already then say...</td>\n",
+       "      <td>u dun say earli hor u c alreadi say</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
+       "      <td>nah think goe usf live around though</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   target                                               text  \\\n",
+       "0       0  Go until jurong point, crazy.. Available only ...   \n",
+       "1       0                      Ok lar... Joking wif u oni...   \n",
+       "2       1  Free entry in 2 a wkly comp to win FA Cup fina...   \n",
+       "3       0  U dun say so early hor... U c already then say...   \n",
+       "4       0  Nah I don't think he goes to usf, he lives aro...   \n",
+       "\n",
+       "                                      processed_text  \n",
+       "0  go jurong point crazi avail bugi n great world...  \n",
+       "1                              ok lar joke wif u oni  \n",
+       "2  free entri 2 wkli comp win fa cup final tkt 21...  \n",
+       "3                u dun say earli hor u c alreadi say  \n",
+       "4               nah think goe usf live around though  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create a new column processing the text column in the original dataframe\n",
+    "df['processed_text'] = df['text'].apply(transform_text)\n",
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "785dd7ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create instance of tf-idf vectorizer\n",
+    "tfid = TfidfVectorizer(max_features = 500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "906dbe36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get x and y values for model training\n",
+    "X = tfid.fit_transform(df['processed_text']).toarray()\n",
+    "y = df['target'].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a41a79cb",
+   "metadata": {},
+   "source": [
+    "Train Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "61c06853",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#split data into train and test\n",
+    "X_train, X_test , y_train, y_test = train_test_split(X,y,test_size = 0.20, random_state = 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3657d1c6",
+   "metadata": {},
+   "source": [
+    "Model Development"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "d549480b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import ML libraries\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from xgboost import XGBClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "a573782e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create instances for each of the machine learning models\n",
+    "svc = SVC(kernel= \"sigmoid\", gamma  = 1.0)\n",
+    "knc = KNeighborsClassifier()\n",
+    "mnb = MultinomialNB()\n",
+    "dtc = DecisionTreeClassifier(max_depth = 5)\n",
+    "lrc = LogisticRegression(solver = 'liblinear', penalty = 'l1')\n",
+    "rfc = RandomForestClassifier(n_estimators = 50, random_state = 2 )\n",
+    "abc = AdaBoostClassifier(n_estimators = 50, random_state = 2)\n",
+    "bc = BaggingClassifier(n_estimators = 50, random_state = 2)\n",
+    "etc = ExtraTreesClassifier(n_estimators = 50, random_state = 2)\n",
+    "gbdt = GradientBoostingClassifier(n_estimators = 50, random_state = 2)    \n",
+    "xgb  = XGBClassifier(n_estimators = 50, random_state = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "a18820c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save the instances in a dictionary for training the model simulatneously\n",
+    "clfs = {\n",
+    "    'SVC': svc,\n",
+    "    'KNN': knc,\n",
+    "    'NB': mnb,\n",
+    "    'DT': dtc,\n",
+    "    'LR': lrc,\n",
+    "    'RF': rfc,\n",
+    "    'Adaboost': abc,\n",
+    "    'Bgc': bc,\n",
+    "    'ETC': etc,\n",
+    "    'GBDT': gbdt,\n",
+    "    'xgb': xgb\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "ec21ad67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create classifier model\n",
+    "from sklearn.metrics import accuracy_score, precision_score\n",
+    "def train_classifier(clfs, X_train, y_train, X_test, y_test):\n",
+    "    clfs.fit(X_train,y_train)\n",
+    "    y_pred = clfs.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    precision = precision_score(y_test, y_pred)\n",
+    "    return accuracy , precision"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f60c98ce",
+   "metadata": {},
+   "source": [
+    "Model evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "70aad1fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "For:  SVC\n",
+      "Accuracy:  0.9671179883945842\n",
+      "Precision:  0.9333333333333333\n",
+      "\n",
+      "For:  KNN\n",
+      "Accuracy:  0.9274661508704062\n",
+      "Precision:  1.0\n",
+      "\n",
+      "For:  NB\n",
+      "Accuracy:  0.9709864603481625\n",
+      "Precision:  0.9655172413793104\n",
+      "\n",
+      "For:  DT\n",
+      "Accuracy:  0.9361702127659575\n",
+      "Precision:  0.9\n",
+      "\n",
+      "For:  LR\n",
+      "Accuracy:  0.9632495164410058\n",
+      "Precision:  0.9629629629629629\n",
+      "\n",
+      "For:  RF\n",
+      "Accuracy:  0.9700193423597679\n",
+      "Precision:  0.9421487603305785\n",
+      "\n",
+      "For:  Adaboost\n",
+      "Accuracy:  0.9235976789168279\n",
+      "Precision:  0.8734177215189873\n",
+      "\n",
+      "For:  Bgc\n",
+      "Accuracy:  0.9622823984526112\n",
+      "Precision:  0.9024390243902439\n",
+      "\n",
+      "For:  ETC\n",
+      "Accuracy:  0.9709864603481625\n",
+      "Precision:  0.921875\n",
+      "\n",
+      "For:  GBDT\n",
+      "Accuracy:  0.9497098646034816\n",
+      "Precision:  0.93\n",
+      "\n",
+      "For:  xgb\n",
+      "Accuracy:  0.9690522243713733\n",
+      "Precision:  0.9568965517241379\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy_scores = []\n",
+    "precision_scores = []\n",
+    "for name , clfs in clfs.items():\n",
+    "    current_accuracy, current_precision = train_classifier(clfs, X_train, y_train, X_test, y_test)\n",
+    "    print()\n",
+    "    print(\"For: \", name)\n",
+    "    print(\"Accuracy: \", current_accuracy)\n",
+    "    print(\"Precision: \", current_precision)\n",
+    "    \n",
+    "    accuracy_scores.append(current_accuracy)\n",
+    "    precision_scores.append(current_precision)"
+   ]
   }
  ],
  "metadata": {
